Closed
Bug 1274445
Opened 9 years ago
Closed 9 years ago
WebM will lose AV sync if you switch tabs
Categories
(Core :: Audio/Video: Playback, defect, P1)
Core
Audio/Video: Playback
Tracking
()
RESOLVED
FIXED
mozilla49
| Tracking | Status | |
|---|---|---|
| firefox49 | --- | fixed |
People
(Reporter: ajones, Assigned: jya)
References
(Blocks 1 open bug, )
Details
Attachments
(2 files, 1 obsolete file)
Steps to reproduce:
* Navigate to boring video above
* Watch video
* Change to a more interesting tab
* Change back to boring video
Expected results:
Video/audio should stay in sync
Actual results:
Audio appears to jump back and A/V sync goes out. Setting media.suspend-bkgnd-video.enabled=false makes the problem go away.
| Reporter | ||
Updated•9 years ago
|
Priority: -- → P1
Comment 1•9 years ago
|
||
Is this bug a dupe or regression of bug 1272422?
Summary: Long boring meeting looses AV sync if you switch tabs → Long boring meeting loses AV sync if you switch tabs
| Reporter | ||
Comment 3•9 years ago
|
||
Disabling background video suspend fixes the issue media.suspend-bkgnd-video.enabled=false
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → jyavenard
| Assignee | ||
Updated•9 years ago
|
Summary: Long boring meeting loses AV sync if you switch tabs → WebM will lose AV sync if you switch tabs
| Assignee | ||
Comment 4•9 years ago
|
||
Bug 1224973 added a new usage of the MediaDataDemuxer where we would seek only inside the video track. So we can't use a common nestegg context for demuxing both the audio and video.
So instead we now use two different nestegg context.
Review commit: https://reviewboard.mozilla.org/r/56188/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/56188/
Attachment #8757763 -
Flags: review?(kinetik)
Attachment #8757764 -
Flags: review?(dglastonbury)
| Assignee | ||
Comment 5•9 years ago
|
||
MediaFormatReader::Reset is already resetting the context.
Review commit: https://reviewboard.mozilla.org/r/56190/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/56190/
Comment 6•9 years ago
|
||
Comment on attachment 8757763 [details]
MozReview Request: Bug 1274445: [webm] P1. Track separately audio track from video track. r?kinetik
https://reviewboard.mozilla.org/r/56188/#review52818
Attachment #8757763 -
Flags: review?(kinetik) → review+
Comment on attachment 8757764 [details]
MozReview Request: Bug 1274445: P2. Don't unnecessarily reset the decoder context. r?kamidphish
https://reviewboard.mozilla.org/r/56190/#review52822
Attachment #8757764 -
Flags: review?(dglastonbury) → review+
| Assignee | ||
Comment 8•9 years ago
|
||
During reset, we seek to the earliest buffered range, but that's assume the video is always the earliest.
so the seek done in reset sometimes fail, causing audio to stop playing...
| Assignee | ||
Comment 9•9 years ago
|
||
Comment on attachment 8757763 [details]
MozReview Request: Bug 1274445: [webm] P1. Track separately audio track from video track. r?kinetik
Review request updated; see interdiff: https://reviewboard.mozilla.org/r/56188/diff/1-2/
| Assignee | ||
Comment 10•9 years ago
|
||
Comment on attachment 8757764 [details]
MozReview Request: Bug 1274445: P2. Don't unnecessarily reset the decoder context. r?kamidphish
Review request updated; see interdiff: https://reviewboard.mozilla.org/r/56190/diff/1-2/
Comment 11•9 years ago
|
||
Comment 12•9 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/0149fb3567b4
https://hg.mozilla.org/mozilla-central/rev/5c383b2162f7
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox49:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
| Assignee | ||
Comment 13•9 years ago
|
||
MozReview-Commit-ID: 60XDTJJqpFR
Attachment #8758530 -
Flags: review?(ajones)
| Assignee | ||
Updated•9 years ago
|
Attachment #8758530 -
Attachment is obsolete: true
Attachment #8758530 -
Flags: review?(ajones)
You need to log in
before you can comment on or make changes to this bug.
Description
•