Bug 1274445: P2. Don't unnecessarily reset the decoder context. r=kamidphish

MediaFormatReader::Reset is already resetting the context.

MozReview-Commit-ID: AWIh9aTFA6S